[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chess = "3.2.0"
futures-util = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serial_test = "3.2.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
