[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chess = "3.2.0"
futures-util = "0.3.31"
jwtk = "0.4.0"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = "3.15.1"
serial_test = "3.2.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
openssl = { version = "0.10.74", features = ["vendored"] }
